review follow-up

--- a/articles/er-evaluation-models/er-general.bib
+++ b/articles/er-evaluation-models/er-general.bib
@@ -147,3 +147,21 @@
   pages={361--376},
   year={1926}
 }
+
+@article{veletsianos2009-enali,
+author = {George Veletsianos and Charles Miller and Aaron Doering},
+title ={Enali: A Research and Design Framework for Virtual Characters and Pedagogical Agents},
+journal = {Journal of Educational Computing Research},
+volume = {41},
+number = {2},
+pages = {171-194},
+year = {2009},
+doi = {10.2190/EC.41.2.c},
+URL = { 
+        https://doi.org/10.2190/EC.41.2.c
+},
+eprint = { 
+        https://doi.org/10.2190/EC.41.2.c
+},
+    abstract = { Conflicts occur when learners interact with pedagogical agents and virtual characters. Such conflicts—arising from technological limitations, psychosocial perceptions, and pedagogical inadequacies—hinder communication and interaction between virtual characters and learners, and impede successful engagement with learning tasks and experiences. To enhance communication and interaction between virtual characters and learners, we propose a three-tier framework of 15 research-based guidelines. This framework enables theorists, researchers, and designers to view virtual characters with a holistic lens, informing the analysis, design, development, implementation, and evaluation of virtual characters in electronic learning contexts. }
+}
