implement equivalence class partitioning example

--- a/notebooks/ditto.ipynb
+++ b/notebooks/ditto.ipynb
@@ -13,8 +13,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-26T11:33:36.148906Z",
-     "start_time": "2025-03-26T11:33:04.117317Z"
+     "end_time": "2025-03-26T18:05:00.964683Z",
+     "start_time": "2025-03-26T18:05:00.959998Z"
     }
    },
    "cell_type": "code",
@@ -33,17 +33,8 @@
     "GROUND_TRUTH_PATH = os.path.join(DATADIR, \"abt-buy\", \"abt_buy_perfectMapping.csv\")"
    ],
    "id": "17fbc732bd2e7b2f",
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/cusi/Source/github.com/matchescu/.venv/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
-   "execution_count": 1
+   "outputs": [],
+   "execution_count": 13
   },
   {
    "metadata": {},
@@ -59,8 +50,8 @@
    "id": "b9741bb63d0c5d05",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-26T11:33:36.229922Z",
-     "start_time": "2025-03-26T11:33:36.153972Z"
+     "end_time": "2025-03-26T18:05:01.015979Z",
+     "start_time": "2025-03-26T18:05:00.980357Z"
     }
    },
    "source": [
@@ -122,7 +113,7 @@
      ]
     }
    ],
-   "execution_count": 2
+   "execution_count": 14
   },
   {
    "cell_type": "markdown",
@@ -140,8 +131,8 @@
    "id": "970ed70d018355a7",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-26T11:33:39.830259Z",
-     "start_time": "2025-03-26T11:33:36.342584Z"
+     "end_time": "2025-03-26T18:05:03.992687Z",
+     "start_time": "2025-03-26T18:05:01.026608Z"
     }
    },
    "source": [
@@ -151,9 +142,9 @@
     "\n",
     "csg = (\n",
     "    BinaryComparisonSpaceGenerator()\n",
-    "    .add_blocker(TfIdfBlocker(id_table, 0.225))\n",
+    "    .add_blocker(TfIdfBlocker(id_table, 0.25))\n",
     "    .add_blocker(SortedNeighborhoodBlocker(id_table, 12))\n",
-    "    .add_blocker(LSHBlocker(id_table, 0.27))\n",
+    "    .add_blocker(LSHBlocker(id_table, 0.25))\n",
     "    .add_filter(is_cross_source_comparison)\n",
     ")\n",
     "comparison_space = csg()\n",
@@ -167,12 +158,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "BlockingMetrics(pair_completeness=0.7055606198723792, pair_quality=0.032940375367068134, reduction_ratio=0.9800949127961154)\n",
-      "comparison space size: 23497\n"
+      "BlockingMetrics(pair_completeness=0.5943482224247949, pair_quality=0.034706696476099225, reduction_ratio=0.9840857569812241)\n",
+      "comparison space size: 18786\n"
      ]
     }
    ],
-   "execution_count": 3
+   "execution_count": 15
   },
   {
    "cell_type": "markdown",
@@ -189,8 +180,8 @@
    "id": "839f3e67bfdbc056",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-26T11:33:42.211203Z",
-     "start_time": "2025-03-26T11:33:39.835975Z"
+     "end_time": "2025-03-26T18:05:06.098712Z",
+     "start_time": "2025-03-26T18:05:04.001360Z"
     }
    },
    "source": [
@@ -214,7 +205,7 @@
      ]
     }
    ],
-   "execution_count": 4
+   "execution_count": 16
   },
   {
    "cell_type": "markdown",
@@ -227,8 +218,8 @@
    "id": "459dcdd56883c2f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-26T11:51:34.551859Z",
-     "start_time": "2025-03-26T11:33:42.222345Z"
+     "end_time": "2025-03-26T18:19:00.223718Z",
+     "start_time": "2025-03-26T18:05:06.106301Z"
     }
    },
    "source": [
@@ -258,12 +249,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ground truth size: 23497, prediction size: 23497\n",
-      "precision: 0.73, recall: 0.81, F1: 0.77\n"
+      "ground truth size: 18786, prediction size: 18786\n",
+      "precision: 0.70, recall: 0.81, F1: 0.75\n"
      ]
     }
    ],
-   "execution_count": 5
+   "execution_count": 17
   },
   {
    "metadata": {},
@@ -278,8 +269,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-26T11:51:35.013953Z",
-     "start_time": "2025-03-26T11:51:34.584985Z"
+     "end_time": "2025-03-26T18:19:00.275461Z",
+     "start_time": "2025-03-26T18:19:00.236129Z"
     }
    },
    "cell_type": "code",
@@ -322,13 +313,13 @@
     "print(repr(simg))\n",
     "# the scores should be the same as the previous cell scores\n",
     "cs_true_matches = set(comparison_space) & set(gt)\n",
-    "matches = set(starmap(lambda x, y: (x.id, y.id), simg.matches()))\n",
+    "sim_graph_matches = frozenset(starmap(lambda x, y: (x.id, y.id), simg.matches()))\n",
     "print(\n",
     "    \"precision: %.2f, recall: %.2f, F1: %.2f\"\n",
     "    % (\n",
-    "        precision(cs_true_matches, matches),\n",
-    "        recall(cs_true_matches, matches),\n",
-    "        f1(cs_true_matches, matches),\n",
+    "        precision(cs_true_matches, sim_graph_matches),\n",
+    "        recall(cs_true_matches, sim_graph_matches),\n",
+    "        f1(cs_true_matches, sim_graph_matches),\n",
     "    )\n",
     ")"
    ],
@@ -338,23 +329,81 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SimilarityGraph(nodes=2172, edges=866, match=866, non_match=22631, maybe=0)\n",
-      "precision: 0.73, recall: 0.81, F1: 0.77\n"
+      "SimilarityGraph(nodes=2172, edges=755, match=755, non_match=18031, maybe=0)\n",
+      "precision: 0.70, recall: 0.81, F1: 0.75\n"
      ]
     }
    ],
-   "execution_count": 6
+   "execution_count": 18
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-26T11:51:35.024964Z",
-     "start_time": "2025-03-26T11:51:35.023469Z"
+     "end_time": "2025-03-26T18:19:15.885060Z",
+     "start_time": "2025-03-26T18:19:14.721869Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "from pyresolvemetrics import cluster_precision, cluster_recall, cluster_comparison_measure, rand_index, \\\n",
+    "    adjusted_rand_index, twi, pair_precision, pair_recall, pair_comparison_measure\n",
+    "from matchescu.clustering import EquivalenceClassPartitioner\n",
+    "\n",
+    "\n",
+    "unique_ids = list(map(lambda r: r.id, id_table))\n",
+    "partitioner = EquivalenceClassPartitioner(unique_ids)\n",
+    "gt_clusters = partitioner(cs_true_matches)\n",
+    "result_clusters = partitioner(sim_graph_matches)\n",
+    "\n",
+    "print(\n",
+    "    \"pair precision: %.2f, pair recall: %.2f, pair F-measure: %.2f\"\n",
+    "    % (\n",
+    "        pair_precision(gt_clusters, result_clusters),\n",
+    "        pair_recall(gt_clusters, result_clusters),\n",
+    "        pair_comparison_measure(gt_clusters, result_clusters),\n",
+    "    )\n",
+    ")\n",
+    "print(\n",
+    "    \"cluster precision: %.2f, cluster recall: %.2f, cluster F-measure: %.2f\"\n",
+    "    % (\n",
+    "        cluster_precision(gt_clusters, result_clusters),\n",
+    "        cluster_recall(gt_clusters, result_clusters),\n",
+    "        cluster_comparison_measure(gt_clusters, result_clusters),\n",
+    "    )\n",
+    ")\n",
+    "print(\n",
+    "    \"Rand index: %.2f, adjusted Rand index: %.2f, Talburt-Wang index: %.2f\"\n",
+    "    % (\n",
+    "        rand_index(gt_clusters, result_clusters),\n",
+    "        adjusted_rand_index(gt_clusters, result_clusters),\n",
+    "        twi(gt_clusters, result_clusters),\n",
+    "    )\n",
+    ")"
+   ],
+   "id": "1f2377af0919b090",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pair precision: 0.65, pair recall: 0.98, pair F-measure: 0.78\n",
+      "cluster precision: 0.95, cluster recall: 0.88, cluster F-measure: 0.91\n",
+      "Rand index: 1.00, adjusted Rand index: 0.80, Talburt-Wang index: 0.93\n"
+     ]
+    }
+   ],
+   "execution_count": 20
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-03-26T18:19:01.457411Z",
+     "start_time": "2025-03-26T18:19:01.456026Z"
     }
    },
    "cell_type": "code",
    "source": "",
-   "id": "1f2377af0919b090",
+   "id": "da6b065ef3aeabb2",
    "outputs": [],
    "execution_count": null
   }
