--- a/notebooks/ditto.ipynb
+++ b/notebooks/ditto.ipynb
@@ -13,8 +13,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-26T18:05:00.964683Z",
-     "start_time": "2025-03-26T18:05:00.959998Z"
+     "end_time": "2025-03-26T18:44:01.818794Z",
+     "start_time": "2025-03-26T18:43:59.384073Z"
     }
    },
    "cell_type": "code",
@@ -33,8 +33,17 @@
     "GROUND_TRUTH_PATH = os.path.join(DATADIR, \"abt-buy\", \"abt_buy_perfectMapping.csv\")"
    ],
    "id": "17fbc732bd2e7b2f",
-   "outputs": [],
-   "execution_count": 13
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/cusi/Source/github.com/matchescu/.venv/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
+   "execution_count": 1
   },
   {
    "metadata": {},
@@ -50,8 +59,8 @@
    "id": "b9741bb63d0c5d05",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-26T18:05:01.015979Z",
-     "start_time": "2025-03-26T18:05:00.980357Z"
+     "end_time": "2025-03-26T18:44:01.877008Z",
+     "start_time": "2025-03-26T18:44:01.823104Z"
     }
    },
    "source": [
@@ -113,7 +122,7 @@
      ]
     }
    ],
-   "execution_count": 14
+   "execution_count": 2
   },
   {
    "cell_type": "markdown",
@@ -131,8 +140,8 @@
    "id": "970ed70d018355a7",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-26T18:05:03.992687Z",
-     "start_time": "2025-03-26T18:05:01.026608Z"
+     "end_time": "2025-03-26T18:44:05.160773Z",
+     "start_time": "2025-03-26T18:44:01.990158Z"
     }
    },
    "source": [
@@ -158,12 +167,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "BlockingMetrics(pair_completeness=0.5943482224247949, pair_quality=0.034706696476099225, reduction_ratio=0.9840857569812241)\n",
-      "comparison space size: 18786\n"
+      "BlockingMetrics(pair_completeness=0.6061987237921604, pair_quality=0.03634872916097295, reduction_ratio=0.984501699349063)\n",
+      "comparison space size: 18295\n"
      ]
     }
    ],
-   "execution_count": 15
+   "execution_count": 3
   },
   {
    "cell_type": "markdown",
@@ -180,8 +189,8 @@
    "id": "839f3e67bfdbc056",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-26T18:05:06.098712Z",
-     "start_time": "2025-03-26T18:05:04.001360Z"
+     "end_time": "2025-03-26T18:44:07.829216Z",
+     "start_time": "2025-03-26T18:44:05.187342Z"
     }
    },
    "source": [
@@ -205,7 +214,7 @@
      ]
     }
    ],
-   "execution_count": 16
+   "execution_count": 4
   },
   {
    "cell_type": "markdown",
@@ -218,8 +227,8 @@
    "id": "459dcdd56883c2f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-26T18:19:00.223718Z",
-     "start_time": "2025-03-26T18:05:06.106301Z"
+     "end_time": "2025-03-26T18:57:30.009319Z",
+     "start_time": "2025-03-26T18:44:07.835734Z"
     }
    },
    "source": [
@@ -249,12 +258,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ground truth size: 18786, prediction size: 18786\n",
-      "precision: 0.70, recall: 0.81, F1: 0.75\n"
+      "ground truth size: 18295, prediction size: 18295\n",
+      "precision: 0.72, recall: 0.82, F1: 0.76\n"
      ]
     }
    ],
-   "execution_count": 17
+   "execution_count": 5
   },
   {
    "metadata": {},
@@ -269,8 +278,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-26T18:19:00.275461Z",
-     "start_time": "2025-03-26T18:19:00.236129Z"
+     "end_time": "2025-03-26T18:57:30.187290Z",
+     "start_time": "2025-03-26T18:57:30.025173Z"
     }
    },
    "cell_type": "code",
@@ -329,76 +338,97 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SimilarityGraph(nodes=2172, edges=755, match=755, non_match=18031, maybe=0)\n",
-      "precision: 0.70, recall: 0.81, F1: 0.75\n"
+      "SimilarityGraph(nodes=2172, edges=755, match=755, non_match=17540, maybe=0)\n",
+      "precision: 0.72, recall: 0.82, F1: 0.76\n"
      ]
     }
    ],
-   "execution_count": 18
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-26T18:19:15.885060Z",
-     "start_time": "2025-03-26T18:19:14.721869Z"
+     "end_time": "2025-03-26T19:44:47.881008Z",
+     "start_time": "2025-03-26T19:44:44.708089Z"
     }
    },
    "cell_type": "code",
    "source": [
     "from pyresolvemetrics import cluster_precision, cluster_recall, cluster_comparison_measure, rand_index, \\\n",
     "    adjusted_rand_index, twi, pair_precision, pair_recall, pair_comparison_measure\n",
-    "from matchescu.clustering import EquivalenceClassPartitioner\n",
+    "from matchescu.clustering import EquivalenceClassPartitioner, ConnectedComponents\n",
     "\n",
     "\n",
-    "unique_ids = list(map(lambda r: r.id, id_table))\n",
+    "unique_ids = list(map(lambda r: r.id, simg.nodes))\n",
     "partitioner = EquivalenceClassPartitioner(unique_ids)\n",
     "gt_clusters = partitioner(cs_true_matches)\n",
-    "result_clusters = partitioner(sim_graph_matches)\n",
     "\n",
-    "print(\n",
-    "    \"pair precision: %.2f, pair recall: %.2f, pair F-measure: %.2f\"\n",
-    "    % (\n",
-    "        pair_precision(gt_clusters, result_clusters),\n",
-    "        pair_recall(gt_clusters, result_clusters),\n",
-    "        pair_comparison_measure(gt_clusters, result_clusters),\n",
-    "    )\n",
-    ")\n",
-    "print(\n",
-    "    \"cluster precision: %.2f, cluster recall: %.2f, cluster F-measure: %.2f\"\n",
-    "    % (\n",
-    "        cluster_precision(gt_clusters, result_clusters),\n",
-    "        cluster_recall(gt_clusters, result_clusters),\n",
-    "        cluster_comparison_measure(gt_clusters, result_clusters),\n",
-    "    )\n",
-    ")\n",
-    "print(\n",
-    "    \"Rand index: %.2f, adjusted Rand index: %.2f, Talburt-Wang index: %.2f\"\n",
-    "    % (\n",
-    "        rand_index(gt_clusters, result_clusters),\n",
-    "        adjusted_rand_index(gt_clusters, result_clusters),\n",
-    "        twi(gt_clusters, result_clusters),\n",
-    "    )\n",
-    ")"
+    "clustering_methods = {\n",
+    "    partitioner: sim_graph_matches,\n",
+    "    ConnectedComponents(None): simg\n",
+    "}\n",
+    "results = []\n",
+    "for clustering_method, param in clustering_methods.items():\n",
+    "    result_clusters = clustering_method(param)\n",
+    "    results.append({\n",
+    "        \"method\": clustering_method.__class__.__name__,\n",
+    "        \"Pair Precision\": pair_precision(gt_clusters, result_clusters),\n",
+    "        \"Pair Recall\": pair_recall(gt_clusters, result_clusters),\n",
+    "        \"Pair Comparison Measure\": pair_comparison_measure(gt_clusters, result_clusters),\n",
+    "        \"Cluster Precision\": cluster_precision(gt_clusters, result_clusters),\n",
+    "        \"Cluster Recall\": cluster_recall(gt_clusters, result_clusters),\n",
+    "        \"Cluster Comparison Measure\": cluster_comparison_measure(gt_clusters, result_clusters),\n",
+    "        \"Rand Index\": rand_index(gt_clusters, result_clusters),\n",
+    "        \"Adjusted Rand Index\": adjusted_rand_index(gt_clusters, result_clusters),\n",
+    "        \"Talburt-Wang Index\": twi(gt_clusters, result_clusters),\n",
+    "    })\n",
+    "\n",
+    "display(pl.DataFrame(results).transpose(include_header=True, header_name=\"method\", column_names=\"method\"))"
    ],
    "id": "1f2377af0919b090",
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pair precision: 0.65, pair recall: 0.98, pair F-measure: 0.78\n",
-      "cluster precision: 0.95, cluster recall: 0.88, cluster F-measure: 0.91\n",
-      "Rand index: 1.00, adjusted Rand index: 0.80, Talburt-Wang index: 0.93\n"
-     ]
+     "data": {
+      "text/plain": [
+       "shape: (9, 3)\n",
+       "┌────────────────────────────┬─────────────────────────────┬─────────────────────┐\n",
+       "│ method                     ┆ EquivalenceClassPartitioner ┆ ConnectedComponents │\n",
+       "│ ---                        ┆ ---                         ┆ ---                 │\n",
+       "│ str                        ┆ f64                         ┆ f64                 │\n",
+       "╞════════════════════════════╪═════════════════════════════╪═════════════════════╡\n",
+       "│ Pair Precision             ┆ 0.668347                    ┆ 0.588719            │\n",
+       "│ Pair Recall                ┆ 0.980769                    ┆ 0.741124            │\n",
+       "│ Pair Comparison Measure    ┆ 0.794964                    ┆ 0.656189            │\n",
+       "│ Cluster Precision          ┆ 0.951133                    ┆ 0.175606            │\n",
+       "│ Cluster Recall             ┆ 0.891175                    ┆ 0.317186            │\n",
+       "│ Cluster Comparison Measure ┆ 0.920178                    ┆ 0.226058            │\n",
+       "│ Rand Index                 ┆ 0.999866                    ┆ 0.999572            │\n",
+       "│ Adjusted Rand Index        ┆ 0.810487                    ┆ 0.784225            │\n",
+       "│ Talburt-Wang Index         ┆ 0.936961                    ┆ 9.860114            │\n",
+       "└────────────────────────────┴─────────────────────────────┴─────────────────────┘"
+      ],
+      "text/html": [
+       "<div><style>\n",
+       ".dataframe > thead > tr,\n",
+       ".dataframe > tbody > tr {\n",
+       "  text-align: right;\n",
+       "  white-space: pre-wrap;\n",
+       "}\n",
+       "</style>\n",
+       "<small>shape: (9, 3)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>method</th><th>EquivalenceClassPartitioner</th><th>ConnectedComponents</th></tr><tr><td>str</td><td>f64</td><td>f64</td></tr></thead><tbody><tr><td>&quot;Pair Precision&quot;</td><td>0.668347</td><td>0.588719</td></tr><tr><td>&quot;Pair Recall&quot;</td><td>0.980769</td><td>0.741124</td></tr><tr><td>&quot;Pair Comparison Measure&quot;</td><td>0.794964</td><td>0.656189</td></tr><tr><td>&quot;Cluster Precision&quot;</td><td>0.951133</td><td>0.175606</td></tr><tr><td>&quot;Cluster Recall&quot;</td><td>0.891175</td><td>0.317186</td></tr><tr><td>&quot;Cluster Comparison Measure&quot;</td><td>0.920178</td><td>0.226058</td></tr><tr><td>&quot;Rand Index&quot;</td><td>0.999866</td><td>0.999572</td></tr><tr><td>&quot;Adjusted Rand Index&quot;</td><td>0.810487</td><td>0.784225</td></tr><tr><td>&quot;Talburt-Wang Index&quot;</td><td>0.936961</td><td>9.860114</td></tr></tbody></table></div>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
-   "execution_count": 20
+   "execution_count": 15
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-26T18:19:01.457411Z",
-     "start_time": "2025-03-26T18:19:01.456026Z"
+     "end_time": "2025-03-26T18:34:20.175629Z",
+     "start_time": "2025-03-26T18:34:20.172493Z"
     }
    },
    "cell_type": "code",
