compare apples to apples

--- a/notebooks/ditto.ipynb
+++ b/notebooks/ditto.ipynb
@@ -348,12 +348,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-26T19:44:47.881008Z",
-     "start_time": "2025-03-26T19:44:44.708089Z"
+     "end_time": "2025-03-26T20:13:06.442645Z",
+     "start_time": "2025-03-26T20:13:04.433880Z"
     }
    },
    "cell_type": "code",
    "source": [
+    "import networkx as nx\n",
     "from pyresolvemetrics import cluster_precision, cluster_recall, cluster_comparison_measure, rand_index, \\\n",
     "    adjusted_rand_index, twi, pair_precision, pair_recall, pair_comparison_measure\n",
     "from matchescu.clustering import EquivalenceClassPartitioner, ConnectedComponents\n",
@@ -361,15 +362,14 @@
     "\n",
     "unique_ids = list(map(lambda r: r.id, simg.nodes))\n",
     "partitioner = EquivalenceClassPartitioner(unique_ids)\n",
-    "gt_clusters = partitioner(cs_true_matches)\n",
+    "connected_components = ConnectedComponents(None)\n",
     "\n",
-    "clustering_methods = {\n",
-    "    partitioner: sim_graph_matches,\n",
-    "    ConnectedComponents(None): simg\n",
-    "}\n",
+    "clustering_methods = [\n",
+    "    (partitioner, partitioner(cs_true_matches), partitioner(sim_graph_matches)),\n",
+    "    (connected_components, frozenset(frozenset(ref_id for ref_id in cluster) for cluster in nx.connected_components(nx.Graph(cs_true_matches))), connected_components(simg)),\n",
+    "]\n",
     "results = []\n",
-    "for clustering_method, param in clustering_methods.items():\n",
-    "    result_clusters = clustering_method(param)\n",
+    "for clustering_method, gt_clusters, result_clusters in clustering_methods:\n",
     "    results.append({\n",
     "        \"method\": clustering_method.__class__.__name__,\n",
     "        \"Pair Precision\": pair_precision(gt_clusters, result_clusters),\n",
@@ -396,15 +396,15 @@
        "│ ---                        ┆ ---                         ┆ ---                 │\n",
        "│ str                        ┆ f64                         ┆ f64                 │\n",
        "╞════════════════════════════╪═════════════════════════════╪═════════════════════╡\n",
-       "│ Pair Precision             ┆ 0.668347                    ┆ 0.588719            │\n",
-       "│ Pair Recall                ┆ 0.980769                    ┆ 0.741124            │\n",
-       "│ Pair Comparison Measure    ┆ 0.794964                    ┆ 0.656189            │\n",
+       "│ Pair Precision             ┆ 0.668347                    ┆ 0.616921            │\n",
+       "│ Pair Recall                ┆ 0.980769                    ┆ 0.776627            │\n",
+       "│ Pair Comparison Measure    ┆ 0.794964                    ┆ 0.687623            │\n",
        "│ Cluster Precision          ┆ 0.951133                    ┆ 0.175606            │\n",
-       "│ Cluster Recall             ┆ 0.891175                    ┆ 0.317186            │\n",
-       "│ Cluster Comparison Measure ┆ 0.920178                    ┆ 0.226058            │\n",
-       "│ Rand Index                 ┆ 0.999866                    ┆ 0.999572            │\n",
-       "│ Adjusted Rand Index        ┆ 0.810487                    ┆ 0.784225            │\n",
-       "│ Talburt-Wang Index         ┆ 0.936961                    ┆ 9.860114            │\n",
+       "│ Cluster Recall             ┆ 0.891175                    ┆ 0.730887            │\n",
+       "│ Cluster Comparison Measure ┆ 0.920178                    ┆ 0.283175            │\n",
+       "│ Rand Index                 ┆ 0.999866                    ┆ 0.999751            │\n",
+       "│ Adjusted Rand Index        ┆ 0.810487                    ┆ 0.882554            │\n",
+       "│ Talburt-Wang Index         ┆ 0.936961                    ┆ 6.082349            │\n",
        "└────────────────────────────┴─────────────────────────────┴─────────────────────┘"
       ],
       "text/html": [
@@ -415,14 +415,14 @@
        "  white-space: pre-wrap;\n",
        "}\n",
        "</style>\n",
-       "<small>shape: (9, 3)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>method</th><th>EquivalenceClassPartitioner</th><th>ConnectedComponents</th></tr><tr><td>str</td><td>f64</td><td>f64</td></tr></thead><tbody><tr><td>&quot;Pair Precision&quot;</td><td>0.668347</td><td>0.588719</td></tr><tr><td>&quot;Pair Recall&quot;</td><td>0.980769</td><td>0.741124</td></tr><tr><td>&quot;Pair Comparison Measure&quot;</td><td>0.794964</td><td>0.656189</td></tr><tr><td>&quot;Cluster Precision&quot;</td><td>0.951133</td><td>0.175606</td></tr><tr><td>&quot;Cluster Recall&quot;</td><td>0.891175</td><td>0.317186</td></tr><tr><td>&quot;Cluster Comparison Measure&quot;</td><td>0.920178</td><td>0.226058</td></tr><tr><td>&quot;Rand Index&quot;</td><td>0.999866</td><td>0.999572</td></tr><tr><td>&quot;Adjusted Rand Index&quot;</td><td>0.810487</td><td>0.784225</td></tr><tr><td>&quot;Talburt-Wang Index&quot;</td><td>0.936961</td><td>9.860114</td></tr></tbody></table></div>"
+       "<small>shape: (9, 3)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>method</th><th>EquivalenceClassPartitioner</th><th>ConnectedComponents</th></tr><tr><td>str</td><td>f64</td><td>f64</td></tr></thead><tbody><tr><td>&quot;Pair Precision&quot;</td><td>0.668347</td><td>0.616921</td></tr><tr><td>&quot;Pair Recall&quot;</td><td>0.980769</td><td>0.776627</td></tr><tr><td>&quot;Pair Comparison Measure&quot;</td><td>0.794964</td><td>0.687623</td></tr><tr><td>&quot;Cluster Precision&quot;</td><td>0.951133</td><td>0.175606</td></tr><tr><td>&quot;Cluster Recall&quot;</td><td>0.891175</td><td>0.730887</td></tr><tr><td>&quot;Cluster Comparison Measure&quot;</td><td>0.920178</td><td>0.283175</td></tr><tr><td>&quot;Rand Index&quot;</td><td>0.999866</td><td>0.999751</td></tr><tr><td>&quot;Adjusted Rand Index&quot;</td><td>0.810487</td><td>0.882554</td></tr><tr><td>&quot;Talburt-Wang Index&quot;</td><td>0.936961</td><td>6.082349</td></tr></tbody></table></div>"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
     }
    ],
-   "execution_count": 15
+   "execution_count": 17
   },
   {
    "metadata": {
