--- a/notebooks/ditto.ipynb
+++ b/notebooks/ditto.ipynb
@@ -13,8 +13,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-26T18:44:01.818794Z",
-     "start_time": "2025-03-26T18:43:59.384073Z"
+     "end_time": "2025-03-27T16:00:05.684617Z",
+     "start_time": "2025-03-27T16:00:05.679675Z"
     }
    },
    "cell_type": "code",
@@ -33,17 +33,8 @@
     "GROUND_TRUTH_PATH = os.path.join(DATADIR, \"abt-buy\", \"abt_buy_perfectMapping.csv\")"
    ],
    "id": "17fbc732bd2e7b2f",
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/cusi/Source/github.com/matchescu/.venv/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
-   "execution_count": 1
+   "outputs": [],
+   "execution_count": 2
   },
   {
    "metadata": {},
@@ -59,8 +50,8 @@
    "id": "b9741bb63d0c5d05",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-26T18:44:01.877008Z",
-     "start_time": "2025-03-26T18:44:01.823104Z"
+     "end_time": "2025-03-27T16:00:08.554444Z",
+     "start_time": "2025-03-27T16:00:08.481105Z"
     }
    },
    "source": [
@@ -122,7 +113,7 @@
      ]
     }
    ],
-   "execution_count": 2
+   "execution_count": 3
   },
   {
    "cell_type": "markdown",
@@ -140,8 +131,8 @@
    "id": "970ed70d018355a7",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-26T18:44:05.160773Z",
-     "start_time": "2025-03-26T18:44:01.990158Z"
+     "end_time": "2025-03-27T16:00:14.558973Z",
+     "start_time": "2025-03-27T16:00:11.315578Z"
     }
    },
    "source": [
@@ -167,12 +158,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "BlockingMetrics(pair_completeness=0.6061987237921604, pair_quality=0.03634872916097295, reduction_ratio=0.984501699349063)\n",
-      "comparison space size: 18295\n"
+      "BlockingMetrics(pair_completeness=0.5961713764813127, pair_quality=0.03584150819312764, reduction_ratio=0.9845423617394016)\n",
+      "comparison space size: 18247\n"
      ]
     }
    ],
-   "execution_count": 3
+   "execution_count": 4
   },
   {
    "cell_type": "markdown",
@@ -189,8 +180,8 @@
    "id": "839f3e67bfdbc056",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-26T18:44:07.829216Z",
-     "start_time": "2025-03-26T18:44:05.187342Z"
+     "end_time": "2025-03-27T16:00:21.454638Z",
+     "start_time": "2025-03-27T16:00:17.795464Z"
     }
    },
    "source": [
@@ -209,12 +200,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of RobertaModel were not initialized from the model checkpoint at roberta-base and are newly initialized: ['roberta.pooler.dense.bias', 'roberta.pooler.dense.weight']\n",
+      "Some weights of RobertaModel were not initialized from the model checkpoint at roberta-base and are newly initialized: ['pooler.dense.bias', 'pooler.dense.weight']\n",
       "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
      ]
     }
    ],
-   "execution_count": 4
+   "execution_count": 5
   },
   {
    "cell_type": "markdown",
@@ -227,8 +218,8 @@
    "id": "459dcdd56883c2f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-26T18:57:30.009319Z",
-     "start_time": "2025-03-26T18:44:07.835734Z"
+     "end_time": "2025-03-27T16:14:44.243509Z",
+     "start_time": "2025-03-27T16:00:24.220247Z"
     }
    },
    "source": [
@@ -258,12 +249,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ground truth size: 18295, prediction size: 18295\n",
-      "precision: 0.72, recall: 0.82, F1: 0.76\n"
+      "ground truth size: 18247, prediction size: 18247\n",
+      "precision: 0.72, recall: 0.81, F1: 0.76\n"
      ]
     }
    ],
-   "execution_count": 5
+   "execution_count": 6
   },
   {
    "metadata": {},
@@ -278,8 +269,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-26T18:57:30.187290Z",
-     "start_time": "2025-03-26T18:57:30.025173Z"
+     "end_time": "2025-03-27T16:15:17.361923Z",
+     "start_time": "2025-03-27T16:15:17.292606Z"
     }
    },
    "cell_type": "code",
@@ -322,7 +313,7 @@
     "print(repr(simg))\n",
     "# the scores should be the same as the previous cell scores\n",
     "cs_true_matches = set(comparison_space) & set(gt)\n",
-    "sim_graph_matches = frozenset(starmap(lambda x, y: (x.id, y.id), simg.matches()))\n",
+    "sim_graph_matches = frozenset(simg.matches())\n",
     "print(\n",
     "    \"precision: %.2f, recall: %.2f, F1: %.2f\"\n",
     "    % (\n",
@@ -338,38 +329,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SimilarityGraph(nodes=2172, edges=755, match=755, non_match=17540, maybe=0)\n",
-      "precision: 0.72, recall: 0.82, F1: 0.76\n"
+      "SimilarityGraph(nodes=2173, edges=733, match=733, non_match=17514, maybe=0)\n",
+      "precision: 0.72, recall: 0.81, F1: 0.76\n"
      ]
     }
    ],
-   "execution_count": 6
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-26T20:13:06.442645Z",
-     "start_time": "2025-03-26T20:13:04.433880Z"
+     "end_time": "2025-03-27T16:15:38.051502Z",
+     "start_time": "2025-03-27T16:15:32.795481Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "import networkx as nx\n",
     "from pyresolvemetrics import cluster_precision, cluster_recall, cluster_comparison_measure, rand_index, \\\n",
     "    adjusted_rand_index, twi, pair_precision, pair_recall, pair_comparison_measure\n",
-    "from matchescu.clustering import EquivalenceClassPartitioner, ConnectedComponents\n",
+    "from matchescu.clustering import EquivalenceClassPartitioner, ConnectedComponents, MarkovClustering\n",
     "\n",
     "\n",
-    "unique_ids = list(map(lambda r: r.id, simg.nodes))\n",
-    "partitioner = EquivalenceClassPartitioner(unique_ids)\n",
-    "connected_components = ConnectedComponents(None)\n",
+    "ec_partitioner = EquivalenceClassPartitioner(comparison_space)\n",
+    "connected_components = ConnectedComponents(comparison_space, simg)\n",
+    "mcl = MarkovClustering(comparison_space, simg)\n",
     "\n",
-    "clustering_methods = [\n",
-    "    (partitioner, partitioner(cs_true_matches), partitioner(sim_graph_matches)),\n",
-    "    (connected_components, frozenset(frozenset(ref_id for ref_id in cluster) for cluster in nx.connected_components(nx.Graph(cs_true_matches))), connected_components(simg)),\n",
-    "]\n",
+    "clustering_methods = [ec_partitioner, connected_components, mcl]\n",
     "results = []\n",
-    "for clustering_method, gt_clusters, result_clusters in clustering_methods:\n",
+    "for clustering_method in clustering_methods:\n",
+    "    gt_clusters = clustering_method(cs_true_matches)\n",
+    "    result_clusters = clustering_method(simg.matches())\n",
     "    results.append({\n",
     "        \"method\": clustering_method.__class__.__name__,\n",
     "        \"Pair Precision\": pair_precision(gt_clusters, result_clusters),\n",
@@ -390,22 +379,23 @@
     {
      "data": {
       "text/plain": [
-       "shape: (9, 3)\n",
-       "┌────────────────────────────┬─────────────────────────────┬─────────────────────┐\n",
-       "│ method                     ┆ EquivalenceClassPartitioner ┆ ConnectedComponents │\n",
-       "│ ---                        ┆ ---                         ┆ ---                 │\n",
-       "│ str                        ┆ f64                         ┆ f64                 │\n",
-       "╞════════════════════════════╪═════════════════════════════╪═════════════════════╡\n",
-       "│ Pair Precision             ┆ 0.668347                    ┆ 0.616921            │\n",
-       "│ Pair Recall                ┆ 0.980769                    ┆ 0.776627            │\n",
-       "│ Pair Comparison Measure    ┆ 0.794964                    ┆ 0.687623            │\n",
-       "│ Cluster Precision          ┆ 0.951133                    ┆ 0.175606            │\n",
-       "│ Cluster Recall             ┆ 0.891175                    ┆ 0.730887            │\n",
-       "│ Cluster Comparison Measure ┆ 0.920178                    ┆ 0.283175            │\n",
-       "│ Rand Index                 ┆ 0.999866                    ┆ 0.999751            │\n",
-       "│ Adjusted Rand Index        ┆ 0.810487                    ┆ 0.882554            │\n",
-       "│ Talburt-Wang Index         ┆ 0.936961                    ┆ 6.082349            │\n",
-       "└────────────────────────────┴─────────────────────────────┴─────────────────────┘"
+       "shape: (9, 4)\n",
+       "┌────────────────────────────┬────────────────────────────┬─────────────────────┬──────────────────┐\n",
+       "│ method                     ┆ EquivalenceClassPartitione ┆ ConnectedComponents ┆ MarkovClustering │\n",
+       "│ ---                        ┆ r                          ┆ ---                 ┆ ---              │\n",
+       "│ str                        ┆ ---                        ┆ f64                 ┆ f64              │\n",
+       "│                            ┆ f64                        ┆                     ┆                  │\n",
+       "╞════════════════════════════╪════════════════════════════╪═════════════════════╪══════════════════╡\n",
+       "│ Pair Precision             ┆ 0.686047                   ┆ 0.651629            ┆ 0.71978          │\n",
+       "│ Pair Recall                ┆ 0.97594                    ┆ 0.973783            ┆ 0.984962         │\n",
+       "│ Pair Comparison Measure    ┆ 0.805711                   ┆ 0.780781            ┆ 0.831746         │\n",
+       "│ Cluster Precision          ┆ 0.94722                    ┆ 0.951456            ┆ 0.943456         │\n",
+       "│ Cluster Recall             ┆ 0.886109                   ┆ 0.894161            ┆ 0.683387         │\n",
+       "│ Cluster Comparison Measure ┆ 0.915646                   ┆ 0.921919            ┆ 0.792634         │\n",
+       "│ Rand Index                 ┆ 0.999881                   ┆ 0.999888            ┆ 0.999581         │\n",
+       "│ Adjusted Rand Index        ┆ 0.825516                   ┆ 0.801748            ┆ 0.398493         │\n",
+       "│ Talburt-Wang Index         ┆ 0.935484                   ┆ 0.939781            ┆ 0.679839         │\n",
+       "└────────────────────────────┴────────────────────────────┴─────────────────────┴──────────────────┘"
       ],
       "text/html": [
        "<div><style>\n",
@@ -415,19 +405,19 @@
        "  white-space: pre-wrap;\n",
        "}\n",
        "</style>\n",
-       "<small>shape: (9, 3)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>method</th><th>EquivalenceClassPartitioner</th><th>ConnectedComponents</th></tr><tr><td>str</td><td>f64</td><td>f64</td></tr></thead><tbody><tr><td>&quot;Pair Precision&quot;</td><td>0.668347</td><td>0.616921</td></tr><tr><td>&quot;Pair Recall&quot;</td><td>0.980769</td><td>0.776627</td></tr><tr><td>&quot;Pair Comparison Measure&quot;</td><td>0.794964</td><td>0.687623</td></tr><tr><td>&quot;Cluster Precision&quot;</td><td>0.951133</td><td>0.175606</td></tr><tr><td>&quot;Cluster Recall&quot;</td><td>0.891175</td><td>0.730887</td></tr><tr><td>&quot;Cluster Comparison Measure&quot;</td><td>0.920178</td><td>0.283175</td></tr><tr><td>&quot;Rand Index&quot;</td><td>0.999866</td><td>0.999751</td></tr><tr><td>&quot;Adjusted Rand Index&quot;</td><td>0.810487</td><td>0.882554</td></tr><tr><td>&quot;Talburt-Wang Index&quot;</td><td>0.936961</td><td>6.082349</td></tr></tbody></table></div>"
+       "<small>shape: (9, 4)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>method</th><th>EquivalenceClassPartitioner</th><th>ConnectedComponents</th><th>MarkovClustering</th></tr><tr><td>str</td><td>f64</td><td>f64</td><td>f64</td></tr></thead><tbody><tr><td>&quot;Pair Precision&quot;</td><td>0.686047</td><td>0.651629</td><td>0.71978</td></tr><tr><td>&quot;Pair Recall&quot;</td><td>0.97594</td><td>0.973783</td><td>0.984962</td></tr><tr><td>&quot;Pair Comparison Measure&quot;</td><td>0.805711</td><td>0.780781</td><td>0.831746</td></tr><tr><td>&quot;Cluster Precision&quot;</td><td>0.94722</td><td>0.951456</td><td>0.943456</td></tr><tr><td>&quot;Cluster Recall&quot;</td><td>0.886109</td><td>0.894161</td><td>0.683387</td></tr><tr><td>&quot;Cluster Comparison Measure&quot;</td><td>0.915646</td><td>0.921919</td><td>0.792634</td></tr><tr><td>&quot;Rand Index&quot;</td><td>0.999881</td><td>0.999888</td><td>0.999581</td></tr><tr><td>&quot;Adjusted Rand Index&quot;</td><td>0.825516</td><td>0.801748</td><td>0.398493</td></tr><tr><td>&quot;Talburt-Wang Index&quot;</td><td>0.935484</td><td>0.939781</td><td>0.679839</td></tr></tbody></table></div>"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
     }
    ],
-   "execution_count": 17
+   "execution_count": 10
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-26T18:34:20.175629Z",
+     "end_time": "2025-03-27T07:37:36.209800Z",
      "start_time": "2025-03-26T18:34:20.172493Z"
     }
    },
